--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,15 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 .app-header {
@@ -17,7 +17,7 @@ code {
   min-height: 100vh;
   flex-direction: column;
   text-align: center;
-  background-color: #131A28;
+  background-color: #131a28;
   color: white;
   justify-content: center;
   align-items: center;
@@ -36,13 +36,14 @@ code {
   min-height: 100px;
   font-size: 64px;
   text-align: center;
-  color: #1CDBF5;
+  color: #1cdbf5;
+  border-color: red;
   font-weight: bolder;
   padding: 30px;
 }
 
 .fc-aqua {
-  color: #1CDBF5;
+  color: #1cdbf5;
 }
 
 .fc-white {
@@ -68,16 +69,16 @@ code {
 }
 
 .b-bottom-right {
-  border-right: 15px solid #1CDBF5;
-  border-bottom: 15px solid #1CDBF5;
+  border-right: 15px solid #1cdbf5;
+  border-bottom: 15px solid #1cdbf5;
 }
 
 .b-bottom {
-  border-bottom: 15px solid #1CDBF5;
+  border-bottom: 15px solid #1cdbf5;
 }
 
 .b-right {
-  border-right: 15px solid #1CDBF5;
+  border-right: 15px solid #1cdbf5;
 }
 
 .clear-button {
@@ -85,42 +86,41 @@ code {
   margin: 40px auto 10px auto;
 }
 
-
 @media only screen and (max-width: 600px) {
   .heading-text {
-      color: white;
-      font-size: 30px;
-      font-weight: bolder;
-      text-align: center;
-      margin: 60px 10px;
+    color: white;
+    font-size: 30px;
+    font-weight: bolder;
+    text-align: center;
+    margin: 60px 10px;
   }
 
   .square {
-      min-width: 80px;
-      min-height: 80px;
-      font-size: 32px;
-      font-weight: bolder;
-      padding: 15px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    min-width: 80px;
+    min-height: 80px;
+    font-size: 32px;
+    font-weight: bolder;
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .b-bottom-right {
-      border-right: 10px solid #1CDBF5;
-      border-bottom: 10px solid #1CDBF5;
+    border-right: 10px solid #1cdbf5;
+    border-bottom: 10px solid #1cdbf5;
   }
 
   .b-bottom {
-      border-bottom: 10px solid #1CDBF5;
+    border-bottom: 10px solid #1cdbf5;
   }
 
   .b-right {
-      border-right: 10px solid #1CDBF5;
+    border-right: 10px solid #1cdbf5;
   }
 
   .clear-button {
-      width: max-content;
-      margin: 40px auto 10px auto;
+    width: max-content;
+    margin: 40px auto 10px auto;
   }
 }
