--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #131a28;
+  background-color: #0f0d3c;
 }
 
 .font-link {
